<resources>
    <string name="app_name">MyWeather</string>

    <string name="txt_weather_icon_url">https://openweathermap.org/img/wn/%1$s@4x.png</string>
    <string name="txt_weather_description">%1$s (%2$s)</string>
    <string name="txt_temperature">%1$.1f\u00B0C</string>
    <string name="txt_temperature_feels_like">Feels like %.1f\u00B0C</string>
    <string name="txt_temperature_min_max">%1$.1f/%2$.1f\u00B0C</string>
    <string name="txt_humidity">%1$d%%</string>
    <string name="txt_clouds">%1$d%%</string>
    <string name="txt_wind">%1$.1f km/h</string>
    <string name="txt_pressure">%1$d hPa</string>
    <string name="txt_visibility">%1$d km</string>
    <string name="txt_weather_icon">Weather Icon</string>
    <string name="txt_min_max">Min/max</string>
    <string name="txt_label_humidity">Humidity</string>
    <string name="txt_label_clouds">Clouds</string>
    <string name="txt_label_wind">Wind</string>
    <string name="txt_label_pressure">Pressure</string>
    <string name="txt_label_visibility">Visibility</string>

    <string name="txt_error_no_internet">No Internet Connection</string>
    <string name="txt_click_to_refresh">Click to Refresh</string>
    <string name="txt_need_permission_description">App needs location permission to work properly</string>
    <string name="txt_go_to_settings">Go to Settings</string>
    <string name="txt_turn_on_gps">Turn on GPS location to update the latest weather in your area</string>
    <string name="txt_last_updated_on">Last updated on %1$s</string>
    <string name="txt_syncing_your_current_weather_condition">Syncing your current weather condition...</string>
    <string name="txt_ok">Ok</string>
    <string name="txt_later">Later</string>
</resources>